# LLM-infra

./: .gitignore  README.md  pyproject.toml
configs/: experiment.yaml  mac_smoke_test.yaml
data/apps/: summary.json  val.jsonl
data/apps_taco_mix/: summary.json  val.jsonl
data/taco_verified/: train.jsonl  train_progress.json
evalplus_results/humaneval/: qwen25-1p5b-base_openai_temp_0.0.jsonl  qwen25-1p5b-base_openai_temp_0.0.raw.jsonl  qwen25-1p5b-base_openai_temp_0.0_eval_results.json  qwen25-1p5b-new-data-run-10_openai_temp_0.0.jsonl  qwen25-1p5b-new-data-run-10_openai_temp_0.0.raw.jsonl  qwen25-1p5b-new-data-run-10_openai_temp_0.0_eval_results.json  qwen25-1p5b-new-run-1_openai_temp_0.0.jsonl  qwen25-1p5b-new-run-1_openai_temp_0.0.raw.jsonl  qwen25-1p5b-new-run-1_openai_temp_0.0_eval_results.json  qwen25-1p5b-run-10_openai_temp_0.0.jsonl  qwen25-1p5b-run-10_openai_temp_0.0.raw.jsonl  (+13 more)
runs/: base_model_serving_metrics.json  benchmark_notes.md  humaneval_all_model_samples.json  humaneval_base_samples.json  humaneval_base_vs_run9.md  humaneval_new-data-run-10_samples.json  humaneval_new_run9_samples.json  humaneval_tuned_run2_samples.json  run_index.jsonl  run_report.md  tuned_run2_serving_metrics.json  tuned_run9_serving_metrics.json
runs/local-test/: run_state.json
scripts/: benchmark_vllm.py  dump_humaneval_samples.py  format_humaneval_comparison.py  make_manifest.py  measure_prompt_boundary_mismatch.py  mix_prepared_datasets.py  prepare_apps.py  prepare_taco.py  run_evalplus.sh  sample_gpu_memory.sh  serve_vllm.sh  smoke_test_vllm.py  train_full_sft.py
(+122 files in other folders)
